assignment3-3/assignment3-2/nginx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
spec:
  selector:
    matchLabels:
      app: nginx
      run: my-nginx
  replicas: 5
  template:
    metadata:
      labels:
        app: nginx
        run: my-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-vol
          mountPath: "/etc/nginx/conf.d" # /default.conf
          # subPath: default.conf
          readOnly: true
          # mountPath: "/etc/nginx/nginx.conf"
          # subPath: nginx.cfg
      volumes:
      - name: config-vol             
        configMap:
          name: nginx-configmap
