assignment3-3/assignment3-2/nginx-svc.yaml
# apiVersion: v1
# kind: Service
# metadata: 
#   name: nginx
#   labels: 
#     name: nginx
#     run: my-nginx
# spec:
#   ports:
#     - name: http
#       port: 80
#       targetPort: 80
#   selector: 
#     name: nginx
#     version: "1.10"
#   type: LoadBalancer

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    run: my-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: my-nginx
